--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.wallet-adapter-button.wallet{
+    background-color: transparent;
+    border-style: solid;
+    border-color: rgb(0, 66, 207);
+    border-width: 1.5px;
+}
